test/testdata/functions/anonymous/recursive_local_error.lox
{
    var fib = fun(n) {
        if (n <= 1) {
            return n;
        }
        // error: fib has not been declared
        return fib(n - 1) + fib(n - 2);
    };

    print fib(10);
}
